--- a/index.html
+++ b/index.html
@@ -1,20 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Healthcare</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <!--fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@900&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@900&family=Source+Sans+Pro:wght@300&display=swap"
+        rel="stylesheet">
+
+
+
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-     <div class="header">
+    <div class="header">
         <div class="left">
-            <p><span>H</span>ealthcare</p>
+            <p><span>M</span>edica</p>
 
         </div>
         <div class="right">
         </div>
     </div>
+    <!--    //////////////       -->
+    <div class="container medicine">
+        <div class="container_text">
+            <p class="title">Medicine</p>
+            <p class="subtitle"> Know what you consume.</p>
+            <a href="#"><button class="btn thick-2">Know more</button></a>
+
+        </div>
+    </div>
+    <!--    //////////////       -->
+    <div class="container symptoms">
+        <div class="container_text">
+            <p class="title">Symptoms</p>
+            <p class="subtitle"> Know what you consume.</p>
+            <a href="#"><button class="btn thick-2">Know more</button></a>
+
+        </div>
+    </div>
+    <!--    //////////////       -->
+    <div class="container consult">
+        <div class="container_text">
+            <p class="title">Consult</p>
+            <p class="subtitle"> Know what you consume.</p>
+            <a href="#"><button class="btn thick-2">Know more</button></a>
+
+        </div>
+    </div>
+     <!--    //////////////       -->
+     <div class="container exercise">
+        <div class="container_text">
+            <p class="title">Exercise</p>
+            <p class="subtitle"> Know what you consume.</p>
+            <a href="#"><button class="btn thick-2">Know more</button></a>
+
+        </div>
+    </div>
+     <!--    //////////////       -->
+     <div class="container wellness">
+        <div class="container_text">
+            <p class="title">Wellness</p>
+            <p class="subtitle"> Know what you consume.</p>
+            <a href="#"><button class="btn thick-2">Know more</button></a>
+
+        </div>
+    </div>
+
+
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous">
+        </script>
 </body>
+
 </html>
