--- a/index.html
+++ b/index.html
@@ -18,13 +18,42 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@900&family=Source+Sans+Pro:wght@300&display=swap"
         rel="stylesheet">
-
+    <!-- icons -->
+    
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <!-- social media -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    
 
 
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
+
+    <!-- The overlay -->
+<div id="myNav" class="overlay">
+
+    <!-- Button to close the overlay navigation -->
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+  
+    <!-- Overlay content -->
+    <div class="overlay-content">
+      <a href="index.html" class="thick-2">Home</a>
+      <a href="#" onclick="services()" class="thick-2">Services</a>
+      <a href="#" onclick="consult()" class="thick-2">Consult</a>
+      <a href="#" onclick="contact()" class="thick-2">Contact</a>
+    </div>
+  
+  </div>
+  
+  <!-- Use any element to open/show the overlay navigation menu -->
+  <div class="navbar">
+      <p id="brand">Medica</p>
+      <div class="icon"><i onclick="openNav()" class="material-icons">menu</i></div>
+  </div>
+       <!-- //////////////       -->
+
     <div class="header">
         <div class="left">
             <p><span>M</span>edica</p>
@@ -38,7 +67,7 @@
         <div class="container_text">
             <p class="title">Medicine</p>
             <p class="subtitle"> Know what you consume.</p>
-            <a href="#"><button class="btn thick-2">Know more</button></a>
+            <a href="index_medicine.html"><button class="btn thick-2">Know more</button></a>
 
         </div>
     </div>
@@ -52,15 +81,6 @@
         </div>
     </div>
     <!--    //////////////       -->
-    <div class="container consult">
-        <div class="container_text">
-            <p class="title">Consult</p>
-            <p class="subtitle"> Know what you consume.</p>
-            <a href="#"><button class="btn thick-2">Know more</button></a>
-
-        </div>
-    </div>
-     <!--    //////////////       -->
      <div class="container exercise">
         <div class="container_text">
             <p class="title">Exercise</p>
@@ -78,6 +98,22 @@
 
         </div>
     </div>
+    <div class="container consult">
+        <div class="container_text">
+            <p class="title">Consult</p>
+            <p class="subtitle"> Know what you consume.</p>
+            <a href="index_consult.html"><button class="btn thick-2">Know more</button></a>
+
+        </div>
+    </div>
+     <!--    //////////////       -->
+     <div class="contact">
+         <p class="title">Contact us</p>
+         <p class="subtitle">feel free to contact us for feedback and more</p>
+         <a href="#" class="fa fa-instagram"></a>         
+         <a href="#" class="fa fa-twitter"></a>
+<a href="#" class="fa fa-google"></a>
+     </div>
 
 
 
@@ -86,6 +122,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous">
         </script>
+        <script src="main.js"></script>
+
 </body>
 
 </html>
