Update 5 pages added

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   
     <!-- Overlay content -->
     <div class="overlay-content">
-        <button href="index.html" class="thick-2">Home</button>
+        <button onclick="home()" class="thick-2">Home</button>
         <button  onclick="about()" class="thick-2">About</button>
         <button  onclick="services()" class="thick-2">Services</button>
       <button  onclick="consult()" class="thick-2">Consult</button>
@@ -73,12 +73,41 @@
         </div>
     </div>
 
+    
+    
+    <!--    //////////////       -->
+     <div class="container exercise">
+        <div class="container_text">
+            <p class="title">Exercise</p>
+            <p class="subtitle"> Lets give a gift to your body!</p>
+            <a href="index_exercise.html"><button class="btn thick-2">Know more</button></a>
+
+        </div>
+    </div>
+     <!--    //////////////       -->
+     <div class="container balance">
+        <div class="container_text">
+            <p class="title">Balanced Diet</p>
+            <p class="subtitle"> Lets give a gift to your body!</p>
+            <a href="index_balance.html"><button class="btn thick-2">Know more</button></a>
+
+        </div>
+    </div>
     <!--    //////////////       -->
     <div class="container medicine">
         <div class="container_text">
             <p class="title">Medicine</p>
             <p class="subtitle"> Know what you consume.</p>
             <a href="index_medicine.html"><button class="btn thick-2">Know more</button></a>
+
+        </div>
+    </div>
+     <!--    //////////////       -->
+     <div class="container wellness">
+        <div class="container_text">
+            <p class="title">Wellness</p>
+            <p class="subtitle"> A step towards healthy mind.</p>
+            <a href="index_wellness.html"><button class="btn thick-2">Know more</button></a>
 
         </div>
     </div>
@@ -102,24 +131,6 @@
   </div>
 
 </div>
-    </div>
-    <!--    //////////////       -->
-     <div class="container exercise">
-        <div class="container_text">
-            <p class="title">Exercise</p>
-            <p class="subtitle"> Lets give a gift to your body!</p>
-            <a href="index_exercise.html"><button class="btn thick-2">Know more</button></a>
-
-        </div>
-    </div>
-     <!--    //////////////       -->
-     <div class="container wellness">
-        <div class="container_text">
-            <p class="title">Wellness</p>
-            <p class="subtitle"> A step towards healthy mind.</p>
-            <a href="index_wellness.html"><button class="btn thick-2">Know more</button></a>
-
-        </div>
     </div>
     <div class="container consult">
         <div class="container_text">
