--- a/index_consult.html
+++ b/index_consult.html
@@ -50,10 +50,9 @@
 
         <div class="card">
             <img src="img/Avatars - Default.png" alt="John" style="width:100%">
-            <h1>Dr. Marry Hopkins</h1>
+            <h1>Dr. Marry Hart</h1>
             <p class="title">Physician</p>
             <p>City Hospital</p>
-            <a href="#"><i class="fa fa-twitter"></i></a>
             <a href="#"><i class="fa fa-linkedin"></i></a>
             <p><button>Contact</button></p>
         </div>
@@ -62,7 +61,6 @@
             <h1>Dr. Jane Christ</h1>
             <p class="title">Gynaecologist</p>
             <p>City Hospital</p>
-            <a href="#"><i class="fa fa-twitter"></i></a>
             <a href="#"><i class="fa fa-linkedin"></i></a>
             <p><button>Contact</button></p>
         </div>
@@ -71,7 +69,6 @@
             <h1>Dr. Ajay Mishra</h1>
             <p class="title">Physician</p>
             <p>Central Hospital</p>
-            <a href="#"><i class="fa fa-twitter"></i></a>
             <a href="#"><i class="fa fa-linkedin"></i></a>
             <p><button>Contact</button></p>
         </div>
