--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Healthcare</title>
+    <title>Medica</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <!--fonts-->
@@ -29,7 +29,16 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
+<body onload="loadFun()">
+    <!-- loader -->
+    <div class="loader">
+        <div class="spinner-4"></div>    </div>
+        <script>
+            var load=document.getElementsByClassName("loader")[0];
+            function loadFun(){
+                load.style.display="none";
+            }
+        </script>
 
     <!-- The overlay -->
 <div id="myNav" class="overlay">
