--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <!--    //////////////       -->
     <div class="container medicine">
         <div class="container_text">
-            <p class="title">Medicine</p>
+            <p class="title">Ayurveda</p>
             <p class="subtitle"> Know what you consume.</p>
             <a href="index_medicine.html"><button class="btn thick-2">Know more</button></a>
 
