--- a/index_medicine.html
+++ b/index_medicine.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Medicine</title>
+    <title>Ayurveda</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <!--fonts-->
@@ -37,13 +37,54 @@
     </div>
     <div class="header">
         <div class="left">
-            <p><span>M</span>edicine</p>
+            <p><span>A</span>yurveda</p>
 
         </div>
         <div class="right">
         </div>
     </div>
-    <div class="container"></div>
+    <div class="container">
+        <div class="head">
+            <p>Some best Ayurvedic medicine</p>
+        </div>
+        <div class="img "></div>
+        <div class="info">
+            <h3>Ashwagandha</h3>
+            <p>Ashwagandha is an Ayurvedic spice that may help your body manage stress more effectively. It may also lower your blood sugar levels and improve sleep, memory, muscle growth, and male fertility.</p>
+            <hr>
+            <h3>Boswellia</h3>
+            <p>Boswellia is an Ayurvedic spice with anti-inflammatory properties. It may reduce joint pain, enhance oral health, and improve digestion, as well as increase breathing capacity in people with chronic asthma.</p>
+            <hr>
+            <h3>Triphala</h3>
+            <p>Triphala is an Ayurvedic remedy consisting of three Ayurvedic spices — amla, bibhitaki, and haritaki. It may help reduce joint inflammation, improve digestion, and promote oral health.</p>
+            <hr>
+            <h3>Brahmi</h3>
+            <p>Brahmi is an Ayurvedic herb believed to lower inflammation, improve brain function, and reduce symptoms of ADHD. It may also increase your body’s ability to deal with stress, though more research is needed.</p>
+            <hr>
+            <h3>Cumin</h3>
+            <p>Cumin is an Ayurvedic spice commonly used to add flavor to meals. It may decrease symptoms of IBS, improve risk factors for type 2 diabetes and heart disease, and perhaps even offer some protection against foodborne infection.</p>
+            <hr>
+            <h3>Turmeric</h3>
+            <p>Turmeric is the Ayurvedic spice that gives curry its yellow color. Curcumin, its main compound, may help reduce inflammation and improve heart and brain health. However, large amounts are likely needed to attain these benefits.</p>
+            <hr>
+            <h3>Licorice root</h3>
+            <p>Licorice root is an Ayurvedic spice that may help reduce inflammation and protect against various infections. It may also treat digestive problems and relieve skin irritations.</p>
+            <hr>
+            <h3>Gotu kola </h3>
+            <p>Gotu kola is an Ayurvedic herb that may help boost memory and reduce stress, anxiety, and depression, as well as improve a variety of skin conditions.</p>
+            <hr>
+            <h3>Bitter melon</h3>
+            <p>Bitter melon is an Ayurvedic spice that may help lower blood sugar levels and boost insulin secretion. It may also reduce LDL (bad) cholesterol levels, though more research is needed before strong conclusions can be made.</p>
+            <hr>
+            <h3>Cardamom</h3>
+            <p>Cardamom is an Ayurvedic spice that may lower blood pressure, improve breathing, and potentially help stomach ulcers heal. However, more research is necessary.</p>
+            <hr>
+        </div>
+
+
+
+
+    </div>
 
         <div class="contact">
             <p class="title">Contact us</p>
