--- a/index.html
+++ b/index.html
@@ -32,13 +32,17 @@
 <body onload="loadFun()">
     <!-- loader -->
     <div class="loader">
-        <div class="spinner-4"></div>    </div>
-        <script>
+        <div class="spinner-4"></div> 
+        <p class="message">please Wait a while...</p>
+        <p class="message">Patience is not simply the ability to wait - it's how we behave while we are wating.</p>
+
+    </div>
+        <!-- <script>
             var load=document.getElementsByClassName("loader")[0];
             function loadFun(){
                 load.style.display="none";
             }
-        </script>
+        </script> -->
 
     <!-- The overlay -->
 <div id="myNav" class="overlay">
