--- a/index_wellness.html
+++ b/index_wellness.html
@@ -45,6 +45,19 @@
     </div>
     <div class="container">
         <div class="head">
+            <p>What is mental health?</p>
+        </div>
+        <p class="info">Mental health includes our emotional, psychological, and social well-being. It affects how we think, feel, and act. It also helps determine how we handle stress, relate to others, and make choices. Mental health is important at every stage of life, from childhood and adolescence through adulthood.
+
+            Over the course of your life, if you experience mental health problems, your thinking, mood, and behavior could be affected. Many factors contribute to mental health problems, including:
+            <ul>
+            <li> Biological factors, such as genes or brain chemistry</li>
+            <li>  Life experiences, such as trauma or abuse</li>
+            <li> Family history of mental health problems</li>
+        </ul>
+        </p>
+
+        <div class="head">
             <p>20 motivational quotes</p>
         </div>
         
