--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
         <p class="message">Patience is not simply the ability to wait - it's how we behave while we are wating.</p>
 
     </div>
-        <!-- <script>
+       <script>
             var load=document.getElementsByClassName("loader")[0];
             function loadFun(){
                 load.style.display="none";
             }
-        </script> -->
+        </script> 
 
     <!-- The overlay -->
 <div id="myNav" class="overlay">
